--- a/style.css
+++ b/style.css
@@ -135,7 +135,20 @@ body{
 .list-item{
   left:-3%;
 }
+.card{
+  height: 700px;
+}
 .cardin{
-  top:-60%;
+  top:-40%;
+  height:350px;
+}
+#ul{
+  left:-4%;
+}
+.sel{
+  bottom:15%;
+}
+.fname{
+  top:-63%;
 }
 }
